--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ padding: 15px;
 margin-bottom: 20px;
 border-radius: 5px;
 transition: .10s;
-height: 362px;
+/* height: 362px; */
 box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;;
 }
 #product .item:hover{
@@ -37,6 +37,8 @@ padding: 3px 15px;
 }
 #product .item .details{
 padding: 15px 0;
+height: 50px;
+overflow: hidden;
 }
 #product .item .details a{
 font-size: 14px;
