--- a/css/style.css
+++ b/css/style.css
@@ -159,8 +159,7 @@ margin-bottom: 20px;
 border-radius: 5px;
 transition: .10s;
 /* height: 362px; */
-box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;;
-}
+box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;}
 #product .item:hover{
 border: 1px solid blue;
 }
